--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -9,24 +9,28 @@
     <link rel="stylesheet" href="{% static 'css/blog.css' %}">
   </head>
   <body>
-    <nav class="navbar navbar-light bg-light">
-      <h4 class="navbar-brand">Navbar</h4>
-    </nav>
+    <nav class="navbar navbar-light bg-light">othdev95</nav>
 
     <div class="mynav">
       <ul class="nav flex-column">
-        <li class="nav-item">
+        <li class="nav-item ">
           <a class="nav-link active" href="#">Active</a>
         </li>
+        <li class="divider"></li>
         <li class="nav-item">
           <a class="nav-link" href="#">Link</a>
         </li>
+        <li class="divider"></li>
         <li class="nav-item">
           <a class="nav-link" href="#">Link</a>
         </li>
+        <li class="divider"></li>
         <li class="nav-item">
           <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
         </li>
+        <li class="divider"></li>
+
+
       </ul>
     <div>
 
