--- a/blog/static/blog/blog.css
+++ b/blog/static/blog/blog.css
@@ -1,4 +1,6 @@
+
 html, body { height:100%; overflow:hidden }
+
 
 .mynav{
   width: 300px;
@@ -7,12 +9,15 @@ html, body { height:100%; overflow:hidden }
   border-right: 1px solid rgba(0,0,0,.07);
 }
 .navbar{
+  font-family: 'Lobster', cursive;
+  font-size: 30px;
   height: 55px;
   line-height: 55px;
   margin: 0px;
+  padding-left: 60px;
   background-color: rgba(0,0,0,.08);
-  text-align: left;
 }
+
 
 .divider{
   height: 1px;
