--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -6,10 +6,14 @@
     <title></title>
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
-    <link rel="stylesheet" href="{% static 'css/blog.css' %}">
+
+    <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext" type="text/css">
+    <link rel="stylesheet" href="{% static 'blog/blog.css' %}">
+
   </head>
+
   <body>
-    <nav class="navbar navbar-light bg-light">othdev95</nav>
+    <nav class="navbar navbar-light bg-light">othDev95's Blog</nav>
 
     <div class="mynav">
       <ul class="nav flex-column">
