--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -15,6 +15,7 @@
   <body>
     <nav class="navbar navbar-light bg-light">othDev95's Blog</nav>
 
+  <div class="container">
     <div class="mynav">
       <ul class="nav flex-column">
         <li class="nav-item ">
@@ -36,7 +37,11 @@
 
 
       </ul>
-    <div>
+    </div>
+    <div class="content">
+      {{ posts }}
+    </div>
+  </div>
 
 
 
