--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -1,12 +1,17 @@
 
 html, body { height:100%; overflow:hidden }
 
-
+.container{
+  overflow: hidden;
+  margin: 0px;
+}
 .mynav{
   width: 300px;
   height:100vh;
   background: #fafafa;
   border-right: 1px solid rgba(0,0,0,.07);
+  display: inline-block;
+  float: left;
 }
 .navbar{
   font-family: 'Lobster', cursive;
@@ -15,10 +20,11 @@ html, body { height:100%; overflow:hidden }
   line-height: 55px;
   margin: 0px;
   padding-left: 60px;
-  background-color: rgba(0,0,0,.08);
+  background-color: rgba(250,0,0,.08);
 }
-
-
+.content{
+  float: left;
+}
 .divider{
   height: 1px;
   overflow: hidden;
