--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -4,7 +4,9 @@ html, body { height:100%; overflow:hidden }
 .container{
   overflow: hidden;
   margin: 0px;
+  padding: 0px;
 }
+
 .mynav{
   width: 300px;
   height:100vh;
@@ -13,6 +15,7 @@ html, body { height:100%; overflow:hidden }
   display: inline-block;
   float: left;
 }
+
 .navbar{
   font-family: 'Lobster', cursive;
   font-size: 30px;
@@ -20,7 +23,7 @@ html, body { height:100%; overflow:hidden }
   line-height: 55px;
   margin: 0px;
   padding-left: 60px;
-  background-color: rgba(250,0,0,.08);
+  background-color: rgba(0,0,0,.08);
 }
 
 .content{
