--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
+{% extends 'blog/base.html' %}
 {% load static %}
+
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
@@ -8,38 +10,20 @@
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
 
     <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext" type="text/css">
-    <link rel="stylesheet" href="{% static 'blog/blog.css' %}">
+    <link rel="stylesheet" href="{% static 'css/blog.css' %}">
 
   </head>
 
   <body>
-    <nav class="navbar navbar-light bg-light">othDev95's Blog</nav>
-
-  <div class="container">
-    <div class="mynav">
-      <ul class="nav flex-column">
-        <li class="nav-item ">
-          <a class="nav-link active" href="#">Active</a>
-        </li>
-        <li class="divider"></li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
-        </li>
-        <li class="divider"></li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
-        </li>
-        <li class="divider"></li>
-        <li class="nav-item">
-          <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-        </li>
-        <li class="divider"></li>
-
-
-      </ul>
-    </div>
     <div class="content">
-      {{ posts }}
+      {% block content %}
+      {% for post in posts %}
+      <div class="post">
+        <h1><a href="{% url 'post_detail' pk=post.pk }">{{ post.title }}</a></h1>
+        <p>{{post.published_date|linebreaksbr }} 작성</p>
+      </div>
+      {% endfor %}
+      {% endblock %}
     </div>
   </div>
 
