--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -8,13 +8,13 @@
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
         <link href='//fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
-        <link rel="stylesheet" href="{% static 'css/blog.css' %}">
+        <link rel="stylesheet" href="{% static 'blog/blog.css' %}">
         <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
     <nav class="navbar navbar-light bg-light">othDev95's Blog</nav>
 
-  <div class="container">
+  <div class="content">
     <div class="mynav">
       <ul class="nav flex-column">
         <li class="nav-item ">
@@ -38,9 +38,9 @@
       </ul>
     </div>
 
-      <div class="content container">
-        <div class="row">
-            <div class="col-md-8">
+      <div class="content">
+        <div>
+            <div class="col-md-12">
             {% block content %}
             {% endblock %}
             </div>
