--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -5,46 +5,44 @@
   <head>
     <meta charset="utf-8">
     <title>othDev95's blog</title>
-        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
         <link href='//fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
-        <link rel="stylesheet" href="{% static 'blog/blog.css' %}">
+        <link rel="stylesheet" href="{% static 'css/base.css' %}">
         <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
-    <nav class="navbar navbar-light bg-light">othDev95's Blog</nav>
+    <div class="container">
+      <header class="header">
+        <div class="blog-title"><h1>othdev95's blog</h1></div>
+        <form action="" class="search">
+          <input type="text" placeholder="Search" />
+          <button type="submit">Search</button>
+        </form>
+      </header>
 
-  <div class="content">
-    <div class="mynav">
-      <ul class="nav flex-column">
-        <li class="nav-item ">
-          <a class="nav-link active" href="#">About me</a>
-        </li>
-        <li class="divider"></li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Project</a>
-        </li>
-        <li class="divider"></li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Career</a>
-        </li>
-        <li class="divider"></li>
-        <li class="nav-item">
-          <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-        </li>
-        <li class="divider"></li>
-
-
-      </ul>
-    </div>
-
-      <div class="content">
-        <div>
-            <div class="col-md-12">
-            {% block content %}
-            {% endblock %}
-            </div>
+      <main class="main">
+        <div class="nav-bar">
+          <ul class="nav-ul">
+            <li class="nav-item"><a href="">About othdev95</a></li>
+            <div class="divider"></div>
+            <li class="nav-item"><a href="">Project</a></li>
+            <div class="divider"></div>
+            <li class="nav-item"><a href="">Post</a></li>
+            <div class="divider"></div>
+            <li class="nav-item"><a href="">hi ram ji</a></li>
+            <div class="divider"></div>
+          </ul>
         </div>
-      </div>
+
+        <div class="content">this is content
+          {% block content %}
+          {% endblock %}
+        </div>
+
+      </main>
+
+      <footer class=" footer">
+        <p>© 2019 All Rights Reserved.</p>
+      </footer>
+    </div>
   </body>
 </html>
