--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -33,7 +33,7 @@
           </ul>
         </div>
 
-        <div class="content">this is content
+        <div class="content">
           {% block content %}
           {% endblock %}
         </div>
