--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -15,7 +15,7 @@
   </head>
 
   <body>
-    <div class>
+    <div>
       {% block content %}
       {% for post in posts %}
       <div class="post">
