--- a/blog/static/css/base.css
+++ b/blog/static/css/base.css
@@ -70,8 +70,9 @@ p {
 
 .nav-ul {
   display: block;
-  margin: auto;
   padding-inline-start: 0;
+  margin-block-start:0;
+  margin-block-end:0;
 }
 .nav-item {
   list-style-type: none;
