--- a/blog/static/wtf/base.css
+++ b/blog/static/wtf/base.css
@@ -2,6 +2,8 @@
 *::before,
 *::after {
   box-sizing: border-box;
+  margin-block-start: 0;
+  margin-block-end: 0;
 }
 
 html,
@@ -29,6 +31,8 @@ body {
 h1 {
   display: inline-block;
   font-family: "Lobster", cursive;
+  margin-block-start: 0;
+  margin-block-end: 0;
 }
 
 a {
@@ -37,6 +41,7 @@ a {
   display: block;
 }
 p {
+  display: inline-block;
   margin-block-start: 0;
   margin-block-end: 0;
 }
