--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <title>othDev95's blog</title>
         <link href='//fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
-        <link rel="stylesheet" href="{% static 'css/base.css' %}">
+        <link rel="stylesheet" href="{% static 'wtf/base.css' %}">
         <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
