--- a/blog/static/wtf/base.css
+++ b/blog/static/wtf/base.css
@@ -2,7 +2,7 @@
 *::before,
 *::after {
   box-sizing: border-box;
-  margin:0;
+  margin: 0;
 }
 
 html,
@@ -38,7 +38,8 @@ a {
   color: black;
   display: block;
 }
-p {
+p,
+h4 {
   display: inline-block;
 }
 
@@ -58,11 +59,15 @@ p {
 
 /* Main */
 .main {
-  background-color: green;
+  position: relative;
+  background-color: #fafafc;
   height: 100%;
 }
 
 .nav-bar {
+  position: absolute;
+  left: 0;
+  bottom: 0;
   background: #fafafa;
   display: inline-block;
   border-right: 1px solid rgba(0, 0, 0, 0.07);
@@ -92,12 +97,15 @@ p {
 }
 
 .content {
-  width: 70%;
+  margin-top: 40px;
+  margin-left: 200px;
+  width: 60%;
   display: inline-block;
 }
 
 /* Footer */
 .footer {
+  text-align: right;
   padding: 20px;
-  background-color: rgba(0, 0, 0, 0.19);
+  background-color: rgba(0, 0, 0, 0.08);
 }
