--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,33 +1,44 @@
 <!DOCTYPE html>
-{% extends 'blog/base.html' %}
-{% load static %}
+{% extends 'blog/base.html' %} {% load static %}
 
 <html lang="en" dir="ltr">
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <title></title>
-    <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext" type="text/css">
-    <link rel="stylesheet" href="{% static 'wtf/base.css' %}">
-
+    <link
+      rel="stylesheet"
+      href="//fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext"
+      type="text/css"
+    />
+    <link rel="stylesheet" href="{% static 'wtf/base.css' %}" />
   </head>
 
   <body>
     <div>
-      {% block content %}
-      {% for post in posts %}
+      {% block content %} {% for post in posts %}
       <div class="post">
-        <h1><a href="{% url 'post_detail' pk=post.pk }">{{ post.title }}</a></h1>
-        <p>{{post.published_date|linebreaksbr }} 작성</p>
+        <h1>
+          <a href="{% url 'post_detail' pk=post.pk }">{{ post.title }}</a>
+        </h1>
+        <p>{{ post.published_date | linebreaksbr }} 작성</p>
       </div>
-      {% endfor %}
-      {% endblock %}
+      {% endfor %} {% endblock %}
     </div>
 
-
-
-
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <script
+      src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+      integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+      integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
