--- a/blog/templates/blog/project.html
+++ b/blog/templates/blog/project.html
@@ -8,6 +8,7 @@
     <title>Document</title>
   </head>
   <body>
+    <link rel="stylesheet" href="{% static 'wtf/project.css' %}" />
     {% block content %}
     <h4>
       just check my git: <a href="https://github.com/ohtaehyun"> click here!</a>
