--- a/blog/static/wtf/base.css
+++ b/blog/static/wtf/base.css
@@ -26,8 +26,7 @@ body {
   padding: 10px 20px 10px 40px;
 }
 
-.blog-title,
-h1 {
+.blog-title > h1 {
   display: inline-block;
   font-family: "Lobster", cursive;
   margin: 0;
@@ -97,10 +96,12 @@ h4 {
 }
 
 .content {
-  margin-top: 40px;
+  /* margin-top: 40px; */
   margin-left: 200px;
-  width: 60%;
-  display: inline-block;
+  /* width: fit-content; */
+  padding-top: 40px;
+  padding-right: 40px;
+  display: block;
 }
 
 /* Footer */
