--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -10,18 +10,20 @@
       href="//fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext"
       type="text/css"
     />
-    <link rel="stylesheet" href="{% static 'wtf/base.css' %}" />
   </head>
 
   <body>
     <div>
-      {% block content %} {% for post in posts %}
+      {% block content %}
+      <link rel="stylesheet" href="{% static 'wtf/post_list.css' %}" />
+      {% for post in posts %}
       <div class="post">
         <h1>
           <a href="{% url 'post_detail' pk=post.pk }">{{ post.title }}</a>
         </h1>
         <p>{{ post.published_date | linebreaksbr }} 작성</p>
       </div>
+      <hr />
       {% endfor %} {% endblock %}
     </div>
 
