--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -10,7 +10,7 @@
       rel="stylesheet"
       type="text/css"
     />
-    <link rel="stylesheet" href="{% static 'wtf/base.css' %}" />
+    <link rel="stylesheet" href="{% static 'css/base.css' %}" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
   </head>
   <body>
@@ -18,7 +18,7 @@
       <header class="header">
         <div class="blog-title"><h1>othdev95's blog</h1></div>
         <form action="" class="search">
-          <input type="text" placeholder="Search" />
+          <input type="text" placeholder="Search Post" />
           <button type="submit">Search</button>
         </form>
       </header>
@@ -32,7 +32,7 @@
             <div class="divider"></div>
             <li class="nav-item"><a href="/post_list">Post</a></li>
             <div class="divider"></div>
-            <li class="nav-item"><a href="/hi_ramji">hi ramji</a></li>
+            <li class="nav-item"><a href="/hi_ramji">Hi ramji</a></li>
             <div class="divider"></div>
           </ul>
         </div>
