--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -15,7 +15,7 @@
   <body>
     <div>
       {% block content %}
-      <link rel="stylesheet" href="{% static 'wtf/post_list.css' %}" />
+      <link rel="stylesheet" href="{% static 'css/post_list.css' %}" />
       {% for post in posts %}
       <div class="post">
         <h1>
