--- a/blog/templates/blog/project.html
+++ b/blog/templates/blog/project.html
@@ -8,10 +8,15 @@
     <title>Document</title>
   </head>
   <body>
-    <link rel="stylesheet" href="{% static 'wtf/project.css' %}" />
     {% block content %}
+
+    <link rel="stylesheet" href="{% static 'css/project.css' %}" />
     <h4>
-      just check my git: <a href="https://github.com/ohtaehyun"> click here!</a>
+      just check my git:
+
+      <a href="https://github.com/ohtaehyun" title="othdev95's github">
+        click here!
+      </a>
     </h4>
 
     {% endblock %}
