--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -17,9 +17,9 @@
     <div class="container">
       <header class="header">
         <div class="blog-title"><h1>othdev95's blog</h1></div>
-        <form action="" class="search">
-          <input type="text" placeholder="Search Post" />
-          <button type="submit">Search</button>
+        <form action="" class="search-form">
+          <input type="text" placeholder="Search Post" class="search-inp" />
+          <button type="submit" class="search-btn">Search</button>
         </form>
       </header>
 
