--- a/blog/templates/blog/project.html
+++ b/blog/templates/blog/project.html
@@ -11,13 +11,12 @@
     {% block content %}
 
     <link rel="stylesheet" href="{% static 'css/project.css' %}" />
-    <h4>
-      just check my git:
-
-      <a href="https://github.com/ohtaehyun" title="othdev95's github">
-        click here!
+    <p>
+      just check my github:&nbsp;
+      <a href="https://github.com/ohtaehyun" title="othdev95's github"
+        >click here!
       </a>
-    </h4>
+    </p>
 
     {% endblock %}
   </body>
